Added homepage linking to projects

--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
-<!-- index.html in root of Task-4 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Task 4 Projects</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: linear-gradient(135deg, #e3f2fd, #fffde7);
+    }
+    a {
+      display: inline-block;
+      margin: 20px;
+      padding: 20px 30px;
+      background-color: #1976d2;
+      color: white;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 18px;
+      transition: 0.3s;
+    }
+    a:hover {
+      background-color: #0d47a1;
+    }
+  </style>
 </head>
 <body>
-  <h1>Task 4 - Project Links</h1>
-  <ul>
-    <li><a href="To-do-list/index.html">📝 To-Do List App</a></li>
-    <li><a href="Product-listing/index.html">🛍️ Product Listing Page</a></li>
-  </ul>
+  <h1>🌟 Task 4 - Full Project Implementation</h1>
+  <a href="To-do-list/index.html">📝 To-Do List App</a>
+  <a href="Product%20listing/index.html">🛍️ Product Listing Page</a>
 </body>
 </html>
