--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <body>
   <h1>🌟 Task 4 - Full Project Implementation</h1>
   <a href="To-do-list/index.html">📝 To-Do List App</a>
-  <a href="Product%20listing/index.html">🛍️ Product Listing Page</a>
+  <a href="Product-listing/">🛍️ Product Listing Page</a>
 </body>
 </html>
